# pysurfex-experiment

./: .coveragerc  .gitignore  Dockerfile_ubuntu_18_04  Dockerfile_ubuntu_20_04  Dockerfile_ubuntu_20_04_pip  README.rst  conf.py  create_coverage.sh  create_coverage_pytest.sh  index.rst  poetry.toml  prepare_testdata.sh  pyproject.toml  pysurfex-experiment.code-workspace  pysurfex-experiment.toml  requirements.txt  setup.py
.github/workflows/: linting.yaml  python-package.yml  tests.yml
config/: config.toml  config_exp.toml  config_exp_observations.toml  troika_config.yml
config/configurations/: carra2.toml  isba_dif.toml  isba_dif_snow_ass.toml  sekf.toml
config/env/: ecgb-cca.py  ppi-centos7.py  ppi-rhel8.py
config/input_paths/: ECMWF-atos.json  nebula.json  pc4384.json  ppi-centos7.json  ppi-rhel8.json  unittest.json
config/offline/conf/: system.ppi-rhel8
config/offline/src/: Rules.ppi-rhel8.mk
config/server/: ECMWF-atos.json  ecgb-cca.json  nebula.json  pc4495.json  pc5511.json  unittest.json
config/submit/: ECMWF-atos.json  ecgb-cca.json  nebula.json  ppi-centos7.json  ppi-rhel8.json
config/system/: ECMWF-atos.toml  nebula.toml  pc5511.toml  ppi-centos7.toml  ppi-rhel8.toml  unittest.toml
data/config/: config_exp.toml  config_exp_eps.toml  config_exp_observations.toml  deode.toml  known_hosts.yml
data/config/configurations/: carra2.toml  isba_dif.toml  isba_dif_snow_ass.toml  metno_ldas.toml  sekf.toml
data/config/defaults/: config.toml  deode.toml  pysurfex_experiment_defaults.toml  troika_config.yml
data/config/domains/: Harmonie_domains.json  MET_NORDIC_1_0.toml  MET_NORDIC_2_5.toml
data/config/env/: ECMWF-atos.py  pc5511.py
data/config/include/: archiving.toml  file_templates.toml  macros.toml  mars_settings.toml  sqlite.toml
data/config/include/accelerator_device/: lumi_cpu.toml  lumi_gpu.toml
data/config/include/domains/: BG1_3000x3000_500m.toml  DEMO_60x80_2500m.toml  DEMO_80x90_1000m.toml  DEOL.toml  DRAMMEN.toml  Norrkoping.toml  SMSW.toml  large.toml  paris_osm.toml
data/config/include/platform_paths/: atos_bologna.toml  lumi.toml  nebula.toml  ppi_rhel8.toml  ppi_rhel8_a1.toml
data/config/include/scheduler/: ecflow_atos_bologna.toml  ecflow_lumi.toml  ecflow_nebula.toml  ecflow_ppi_rhel8.toml  ecflow_ppi_rhel8_a1.toml
data/config/include/submission/: atos_bologna.toml  atos_bologna_CY46h1.toml  atos_bologna_CY46h1_large_domain.toml  atos_bologna_CY48t3.toml  atos_bologna_CY48t3_T3999.toml  atos_bologna_CY48t3_large_domain.toml  atos_bologna_CY48t3_large_domainT3999.toml  lumi.toml  lumi_CY48t3.toml  lumi_CY48t3_gpu.toml  nebula.toml  ppi_rhel8.toml  ppi_rhel8_a1.toml
data/config/include/vertical_levels/: MF_87.toml  MF_90.toml  harmonie-arome_65.toml
data/config/input_paths/: ecgb-cca.json  pc5511.json  ppi-centos7.json  ppi-rhel8.json
data/config/mods/: arome_arctic_offline_ppi.toml  netcdf_input_pgd.toml  netcdf_input_single_decade.toml
data/config/nam/: surfex_namelists.yml
data/config/offline/src/: Rules.ppi-rhel8.mk
data/config/scheduler/: ecflow_ppi_rhel8-trygveasp.toml
data/config/server/: nebula.json  pc4384.json  ppi-centos7.json  ppi-rhel8.json
data/config/submit/: ECMWF-atos.json  nebula.json  ppi-centos7.json  ppi-rhel8.json
data/config/system/: ecgb-cca.toml  pc4384.toml  ppi-rhel8.toml
data/input/: binary_input_data.json
data/nam/: meb_settings.json  offline.json  rsmin.json  rsmin_sg.json  rsmin_sg_mod.json  surfex_namelists.yml
docs/: build.sh  example.rst
docs/trainings/: budapest_may_2022.rst
ecf/: InitRun.py  LogProgress.py  LogProgressPP.py  __init__.py  default.py  stand_alone.py
experiment/: __init__.py  cli.py  config_parser.py  configuration.py  datetime_utils.py  experiment.py  host_actions.py  logs.py  progress.py  suites.py  system.py  tasks.py  toolbox.py
experiment/data/config/configurations/: carra2.toml  isba_dif_snow_ass.toml  sekf.toml
experiment/data/config/input/: binary_input_data.json
experiment/data/config/mods/: metno_ldas_single_decade.toml  netcdf_input_pgd.toml
experiment/data/config/scheduler/: ecflow_ppi_rhel8-ecf-prod.toml
experiment/data/config_file_schemas/: main_config_schema.json
experiment/ecf/: InitRun.py  default.py
experiment/scheduler/: __init__.py  scheduler.py  submission.py  suites.py
experiment/setup/: __init__.py  setup.py
experiment/suites/: offline.py
experiment/tasks/: __init__.py  compilation.py  discover_tasks.py  forcing.py  gmtedsoil.py  surfex_binary_task.py  tasks.py
experiment/templates/: cli.py  stand_alone.py
experiment/templates/ecflow/: container.py  default.py
experiment_scheduler/: __init__.py  cli.py  scheduler.py  submission.py  suites.py
experiment_setup/: __init__.py  setup.py
experiment_tasks/: __init__.py  compilation.py  discover_tasks.py  forcing.py  surfex_binary_task.py  tasks.py  testing.py
nam/: io.json  prep_from_namelist_values.json  selected_output.json
offline/: Compile_offline.sh  Configure_offline.sh  Flavour_offline.sh  Install_offline.sh
surfexp/: __init__.py  cli.py  experiment.py  host_actions.py
surfexp/data/: surfexp.toml
surfexp/data/config/configurations/: carra2.toml  metno_ldas.toml  pgd_netcdf.toml  sekf.toml
surfexp/data/config/domains/: MET_NORDIC_2_5.toml
surfexp/data/config/mods/: arome_arctic_offline_ppi.toml
surfexp/suites/: offline.py
surfexp/tasks/: compilation.py  forcing.py  gmtedsoil.py  surfex_binary_task.py  tasks.py
surfexp/templates/: cli.py  stand_alone.py
test/: test_config.py  test_ecflow.py  test_eps.py  test_flow.py  test_scheduler_client.py  test_setup.py  test_submission.py  test_tasks.py
test/scheduler/: __init__.py  scheduler.py
tests/: conftest.py
tests/smoke/: test_main.py
tests/unit/: Dockerfile  test_case_setup.py  test_config.py  test_file_manager.py  test_flow.py  test_host_actions.py  test_scheduler.py  test_setup.py  test_submission.py  test_tasks.py
tests/unit/settings/: nc.toml
trainings/: budapest_may_2022.rst
troika/sites/: sge.py
