[tool.poetry]
name = "experiment"
version = "0.2.0"
description = "pysurfex-experiment"
authors = ["Trygve Aspelien <trygveasp@met.no>"]
readme = "README.rst"

[build-system]
    build-backend = "poetry.core.masonry.api"
    requires = ["poetry-core >= 1.0.0"]

[tool.poetry.dependencies]
    python = ">=3.9,<3.13"
    deode = {git = "git@github.com:trygveasp/Deode-Prototype.git", develop=true, branch="feature/deode_plugin"}
    #pysurfex = {git = "https://github.com/metno/pysurfex.git", develop=true, branch="master", extras=["points", "formats"]}
    #troika = {git = "https://github.com/trygveasp/troika.git", branch="feature/sge"}

[tool.poetry.scripts]
  PySfxExp = "experiment.cli:case_cli"
